--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.5",
-    "angular-mocks": "^1.6.5",
+    "angular": "1.6.5",
+    "angular-mocks": "1.6.5",
     "bootstrap": "^3.3.7",
-    "express": "^4.15.3",
     "font-awesome": "^4.7.0",
     "jasmine-core": "^2.6.4"
   }
